language/move-lang/tests/move_check/expansion/duplicate_function_in_module.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_function_in_module.move:3:9
  │
2 │     fun foo() { }
  │         --- Alias previously defined here
3 │     fun foo() { }
  │         ^^^ Duplicate module member or alias 'foo'. Top level names in a namespace must be unique

